Enable to update user
